@@ -65,7 +65,7 @@ Table of Contents
 
 <strong>Installing Nagios</strong>
 <ul>
-<a href="installing.html"><strong>Comping and installing Nagios</strong></a><br>
+<a href="installing.html"><strong>Compiling and installing Nagios</strong></a><br>
 <a href="installweb.html"><strong>Setting up the web interface</strong></a><br>
 </ul>
 
